<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/ellipse_5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ellipse_6" />

    <LinearLayout
        android:id="@+id/registration_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/my_font_medium"
            android:text="@string/registration"
            android:textSize="25sp"
            android:layout_margin="8sp"/>

        <TextView
            android:id="@+id/email_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font_medium"
            android:text="@string/userName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enter_email_reg3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/enterLogin"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:fontFamily="@font/my_font_medium"/>

        <EditText
            android:id="@+id/enter_email_reg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/enter_email"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:fontFamily="@font/my_font_medium"/>

        <EditText
            android:id="@+id/enter_password_reg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/symbol_number_text"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fi"
            android:textSize="16sp"
            android:fontFamily="@font/my_font_medium"/>

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/ivanov_ivan"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            android:fontFamily="@font/my_font_medium"/>

        <EditText
            android:id="@+id/enter_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/phone_example"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="16sp"
            android:fontFamily="@font/my_font_medium"/>

        <EditText
            android:id="@+id/enter_bio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/my_font_regular"
            android:hint="@string/bio_hint"
            android:padding="5sp"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/my_font_regular"
            android:padding="0dp"
            android:text="@string/registration"
            android:textSize="16sp"
            android:visibility="visible"
            app:backgroundTint="@null" />

    </LinearLayout>

</FrameLayout>
