<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/volunteer_profile_screen">

    <ImageView
        android:id="@+id/ellipse_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_16"/>

    <ImageView
        android:id="@+id/ellipse_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_17"
        android:layout_marginBottom="135dp"
        android:layout_gravity="bottom|end"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/flip_left"
<<<<<<< Updated upstream
        android:layout_margin="30dp"/>
=======
        android:layout_margin="30dp"
        android:contentDescription="@string/center_list_header" />
>>>>>>> Stashed changes

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/my_font_medium"
            android:text="@string/org_name"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="950dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fillViewport="true"
<<<<<<< Updated upstream
            android:marginBottom="20dp">
=======
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/re">
>>>>>>> Stashed changes

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<<<<<<< Updated upstream
=======

>>>>>>> Stashed changes
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/org_photo" />
<<<<<<< Updated upstream
=======

>>>>>>> Stashed changes
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/org_photo"
<<<<<<< Updated upstream
                    android:layout_gravity="center"/>
=======
                    android:layout_gravity="center" />

>>>>>>> Stashed changes
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/org_photo"
<<<<<<< Updated upstream
                    android:layout_gravity="end"/>
=======
                    android:layout_gravity="end" />
>>>>>>> Stashed changes
            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_marginLeft="30dp"
            android:id="@+id/description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/org_description"
            android:textSize="18sp"
            android:fontFamily="@font/my_font_regular"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_active_vol"
                android:layout_marginLeft="30dp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_number_of_vol"
                android:layout_marginLeft="2dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out"
                android:fontFamily="@font/my_font_regular"
                android:textColor="@color/coral"/>
            <View
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19sp"
                android:layout_width="83sp"
                android:background="@color/coral"
                android:layout_height="1dp"/>
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
<<<<<<< Updated upstream
            android:id="@+id/log_in_btn"
            android:layout_width="350dp"
            android:layout_height="32sp"
            app:backgroundTint="@color/coral"
            app:cornerRadius="8dp"
=======
            android:id="@+id/log_in_btn1"
            android:layout_width="350dp"
            android:layout_height="48dp"
>>>>>>> Stashed changes
            android:background="@drawable/btn_style"
            android:layout_gravity="center"
            android:text="@string/join"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/my_font_regular"
<<<<<<< Updated upstream
            android:padding="0sp"/>
=======
            android:padding="0sp"
            app:backgroundTint="@color/coral"
            app:cornerRadius="8dp" />
>>>>>>> Stashed changes

    </LinearLayout>

    <FrameLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/list_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/list_white"
            android:layout_margin="40dp"
<<<<<<< Updated upstream
            android:elevation="10dp"/>
=======
            android:elevation="10dp"
            android:contentDescription="@string/email"
            tools:ignore="TouchTargetSizeCheck" />

>>>>>>> Stashed changes
        <ImageButton
            android:id="@+id/map_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/map_ic"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
<<<<<<< Updated upstream
            android:elevation="10dp"/>
=======
            android:elevation="10dp"
            android:contentDescription="@string/cancel"
            tools:ignore="TouchTargetSizeCheck" />

>>>>>>> Stashed changes
        <ImageButton
            android:id="@+id/profile_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/profile_ic"
            android:layout_margin="40dp"
            android:layout_gravity="end"
<<<<<<< Updated upstream
            android:elevation="10dp"/>
=======
            android:elevation="10dp"
            android:contentDescription="@string/bio_hint"
            tools:ignore="TouchTargetSizeCheck" />

>>>>>>> Stashed changes
        <ImageButton
            android:id="@+id/menu_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ellipse_menu"
            android:layout_margin="32dp"
<<<<<<< Updated upstream
            android:elevation="9dp"/>
=======
            android:elevation="9dp"
            android:contentDescription="@string/center_list_header" />
>>>>>>> Stashed changes

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

<<<<<<< Updated upstream
</FrameLayout>
=======
</FrameLayout>
>>>>>>> Stashed changes
