<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_screen">

    <ImageView
        android:id="@+id/ellipse_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_7"/>

    <ImageView
        android:id="@+id/ellipse_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_8"
        android:layout_gravity="end"/>

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140sp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font_medium"
            android:text="@string/profile"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi"
                android:textSize="16sp"
                android:fontFamily="@font/my_font"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="16sp"
                android:fontFamily="@font/my_font_regular"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:fontFamily="@font/my_font"/>

            <TextView
                android:id="@+id/userphone"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/userphone"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="16sp"
                android:fontFamily="@font/my_font_regular"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:fontFamily="@font/my_font"/>

            <TextView
                android:id="@+id/useremail"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:text="@string/useremail"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="16sp"
                android:fontFamily="@font/my_font_regular"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="16sp"
                android:fontFamily="@font/my_font" />

            <TextView
                android:id="@+id/userbio"
                android:layout_width="match_parent"
                android:layout_height="230sp"
                android:text="@string/userbio"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/my_font_regular"/>

        </FrameLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/log_out"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20sp"
        android:src="@drawable/log_out"/>

    <ImageButton
        android:id="@+id/edit"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="23sp"
        android:layout_marginRight="90sp"
        android:src="@drawable/edit"/>

    <FrameLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/list_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/list_ic"
            android:layout_margin="40dp"
            android:elevation="10dp"/>
        <ImageButton
            android:id="@+id/map_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/map_ic"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:elevation="10dp"/>
        <ImageButton
            android:id="@+id/profile_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/profile_white"
            android:layout_margin="40dp"
            android:layout_gravity="end"
            android:elevation="10dp"/>
        <ImageButton
            android:id="@+id/menu_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ellipse_menu"
            android:layout_margin="32dp"
            android:layout_gravity="end"
            android:elevation="9dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</FrameLayout>